@@ -1,17 +1,19 @@
-package vanityblocks;
+package vanityblocks.ItemBlocks;
 
 import net.minecraft.item.ItemBlock;
 import net.minecraft.item.ItemStack;
 
-public class VanitydesignItemBlock extends ItemBlock {
+public class StorageItemBlock extends ItemBlock {
 
-	private final static String[] subNames = { "Lava Lamp", "", "", "", "", "",
-			"", "", "", "", "", "", "", "", "", "", "", "" };
+	private final static String[] subNames = { "SugarCane Block", "Coal Block",
+			"Charcoal Block", "Enderpearl Block", "Slime Block",
+			"Bale of Wheat", "Sugar Block", "Cocoa Block", "", "Leather Block",
+			"Bone Block", "", "", "", "", "" };
 
-	public VanitydesignItemBlock(int id) {
+	public StorageItemBlock(int id) {
 		super(id);
 		setHasSubtypes(true);
-		// setItemName("vanitydesignblocks");
+		// setItemName("storageblock");
 	}
 
 	@Override
