@@ -3,16 +3,16 @@ package vanityblocks.Registrations;
 import net.minecraft.block.Block;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
-import vanityblocks.ItemBlockMarbleSlab;
-import vanityblocks.ItemBlockMarbleWall;
 import vanityblocks.MarbleStair;
 import vanityblocks.Marbleslab;
 import vanityblocks.MarbleWall;
 import vanityblocks.Storageprops;
 import vanityblocks.VanityDesignblock;
 import vanityblocks.VanityDesignworldblock;
-import vanityblocks.VanitydesignItemBlock;
-import vanityblocks.VanitydesignworldItemBlock;
+import vanityblocks.ItemBlocks.ItemBlockMarbleSlab;
+import vanityblocks.ItemBlocks.ItemBlockMarbleWall;
+import vanityblocks.ItemBlocks.VanitydesignItemBlock;
+import vanityblocks.ItemBlocks.VanitydesignworldItemBlock;
 import cpw.mods.fml.common.registry.GameRegistry;
 import cpw.mods.fml.common.registry.LanguageRegistry;
 
