@@ -5,10 +5,11 @@ V4.0.1: Fixed a config issue breaking McUpdater. Made blaze rod storage and coal
 V4.0:Updated to 1.6.X 
 Condensed down three modules to single mod. Moved some files around. Changed some metadatas. Removed duplicate blocks- coal, wheat, coal coke, osmium(main mods added them). Added the bouncing effect to entities on slime blocks(mobs/players/blocks/items). Added Liquid destroying capabilities to Melting Core. Added slabs for the marble types(what a pain).Added Rupee as a side part(Currency for servers, disable with the config).Fixed recipe with dragon egg. Added a flint and a coal item for storage. Added recipe to break saddle down to leather. Added Marble and ashford marble walls.Added arrow storage item. Added ability to bypass some mod nerf recipes, check config to enable(disabled by default). Added marble pillars and tiles. Added clay brick, Old Lapis texture block, and a White soul sand.
 Todo: 
+Maybe add worldgen of a pineapple tree/bush for food
+Maybe add hidden trapdoors
 Maybe add a fence gate for wood types/stone types/marbles
 Maybe add a corner block like a slope
 Maybe add a plant that grows ?
-Added steps of the marble blocks.
 Add more brick blocks? emerald,ice brick(maybe diff colors?)
 Possibly add hot chocolate crate if i make it stack to 1
 add item for waterbreathing effect: maybe worldgen of seaweed, plant growing rice, and combine with fish for the effect
